--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                 border-top-color: #00E5FF;
             }
             50% {
-                border-top-color: #FCFF00;
+                border-top-color: #FF0096;
             }
             100% {
-                border-top-color: ##FF00B4;
+                border-top-color: ##97FF00;
             }
         }
 
@@ -313,30 +313,37 @@
         }
 
         async function checkIPv4() {
-            try {
-                const response = await fetch('https://ipv4.icanhazip.com/', { method: 'GET' });
-                if (response.ok) {
-                    document.getElementById('ipv4Status').textContent = 'IPv4 supported.';
-                } else {
-                    document.getElementById('ipv4Status').textContent = 'IPv4 not supported.';
-                }
-            } catch (error) {
-                document.getElementById('ipv4Status').textContent = 'IPv4 not supported.';
-            }
+    try {
+        const response = await fetch('https://ipv4.icanhazip.com/', { method: 'GET' });
+        if (response.ok) {
+            document.getElementById('ipv4Status').textContent = 'IPv4 supported.';
+            console.log('IPv4 supported.');
+        } else {
+            document.getElementById('ipv4Status').textContent = 'IPv4 not supported.';
+            console.log('IPv4 not supported.');
         }
+    } catch (error) {
+        document.getElementById('ipv4Status').textContent = 'IPv4 not supported.';
+        console.error('Error checking IPv4 support:', error);
+    }
+}
 
-        async function checkIPv6() {
-            try {
-                const response = await fetch('https://ipv6.icanhazip.com/', { method: 'GET' });
-                if (response.ok) {
-                    document.getElementById('ipv6Status').textContent = 'IPv6 supported.';
-                } else {
-                    document.getElementById('ipv6Status').textContent = 'IPv6 not supported.';
-                }
-            } catch (error) {
-                document.getElementById('ipv6Status').textContent = 'IPv6 not supported.';
-            }
+async function checkIPv6() {
+    try {
+        const response = await fetch('https://ipv6.icanhazip.com/', { method: 'GET' });
+        if (response.ok) {
+            document.getElementById('ipv6Status').textContent = 'IPv6 supported.';
+            console.log('IPv6 supported.');
+        } else {
+            document.getElementById('ipv6Status').textContent = 'IPv6 not supported.';
+            console.log('IPv6 not supported.');
         }
+    } catch (error) {
+        document.getElementById('ipv6Status').textContent = 'IPv6 not supported.';
+        console.error('Error checking IPv6 support:', error);
+    }
+}
+
 
         checkIPv4();
         checkIPv6();
